[package]
name = "nonce-auth"
version = "0.1.7"
edition = "2024"
authors = ["Leo <kookyleo@gmail.com>"]
repository = "https://github.com/kookyleo/nonce-auth"
homepage = "https://github.com/kookyleo/nonce-auth"
documentation = "https://docs.rs/nonce-auth"
license = "MIT OR Apache-2.0"
description = "A secure nonce-based authentication library for preventing replay attacks"
keywords = ["nonce", "auth", "authentication", "security", "replay-attack"]
categories = ["authentication", "cryptography", "web-programming"]
readme = "README.md"
exclude = [
    ".github/*",
    "*.md",
    "examples/*",
]

[dependencies]
turbosql = "0.13"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
warp = "0.3"
rand = "0.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
