[package]
name = "nonce-auth"
version = "0.6.3"
edition = "2024"
authors = ["Leo <kookyleo@gmail.com>"]
repository = "https://github.com/kookyleo/nonce-auth"
homepage = "https://github.com/kookyleo/nonce-auth"
documentation = "https://docs.rs/nonce-auth"
license = "MIT OR Apache-2.0"
description = "A secure nonce-based authentication library with pluggable storage backends"
keywords = ["nonce", "auth", "authentication", "security", "replay-attack"]
categories = ["authentication", "cryptography", "web-programming"]
readme = "README.md"
exclude = [
    ".github/*",
    "*.md",
    "examples/*",
]

[features]
default = ["default-generators", "memory-storage", "algo-hmac-sha256"]

# Core functionality
default-generators = ["uuid"]
metrics = []

# Storage backends
memory-storage = []
sqlite-storage = ["rusqlite"]
redis-storage = ["redis"]

# Signature algorithms
algo-hmac-sha256 = ["hmac", "sha2", "base64"]
algo-ed25519 = ["ed25519-dalek", "signature"]

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
async-trait = "0.1"

# Feature-gated dependencies
uuid = { version = "1.0", features = ["v4"], optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
ed25519-dalek = { version = "2.0", optional = true }
signature = { version = "2.0", optional = true }
rusqlite = { version = "0.37", features = ["bundled"], optional = true }
redis = { version = "0.24", features = ["aio", "tokio-comp"], optional = true }

[dev-dependencies]
warp = "0.3"
rand = "0.8"
serial_test = "3.0"
tracing-subscriber = "0.3"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
# Include all optional dependencies in dev for testing
uuid = { version = "1.0", features = ["v4"] }
rusqlite = { version = "0.37", features = ["bundled"] }
hmac = "0.12"
sha2 = "0.10"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
